--- a/index.html
+++ b/index.html
@@ -1,8 +1,62 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Nothing</title>
-    </head>
-  <body>
-    <h1>Hiiii</h1>
-    </body>
-  </html>
+<head>
+    <title>Post Office Job Vacancies</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f2f2f2;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #0073e6;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 36px;
+        }
+        .job-listing {
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            margin: 20px;
+            padding: 20px;
+        }
+        .job-title {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .job-salary {
+            color: #0073e6;
+            font-size: 18px;
+        }
+        .redirect-button {
+            background-color: #0073e6;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-left: 100px;
+        }
+        .redirect-button:hover {
+            background-color: #0054a4;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Post Office Job Vacancies</h1>
+    </header>
+    <div class="job-listing">
+        <div class="job-title">Job Title: Postal Clerk</div>
+        <div class="job-salary">Salary: $21,000 per year</div>
+        <p>Description: Heare is a new job vacancy in post office.work for 4 hours.Age start from 19 to 45. Retirement pension is 6000 per month.Apply now.</p>
+    </div>
+    <button class="redirect-button" onclick="window.location.href='form.html'">Apply Now</button>
+</body>
+</html>
